--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-/* soft reset do css */
+/*reset do css */
 * {
   margin: 0;
   padding: 0;
@@ -7,25 +7,32 @@
 
 body {
     background-image:
-  url("https://www.worldofwallpaper.com/media/catalog/product/cache/f71946573e80bdd0181c5d8a67d6658d/d/e/dec171-apex-wood-grain-geometric-wallpaper-rose-gold-ea_1.jpg");
+  url("https://usewallpaper.com/upload/san-pham/industry-pink-wallpaper-iphone-11-ios-14-wall-24-720x1280.jpg");
     background-size: auto 100vh;
-    font-family:Monospace;
+    font-family:Arial;
     height:100vh;
     } 
-
-  .menu{
-    background-color:WhiteSmoke;
+.menu{
+    background-image: url("https://i.pinimg.com/originals/c4/bd/8d/c4bd8dd8395edb8d529b40bdcca5112a.jpg");
+    font-family: 'Caveat', cursive;
+  
     }
   
-  .menu li{
+.menu li{
     list-style:none;
+    
   } 
   
   .menu ul {
     display: flex;
     justify-content: space-around; 
+    
   } 
-  
+  .menu a {
+    display:block;
+    padding: 10x 10px;
+
+  }
   a {
     color:SaddleBrown;
     text-decoration:none; 
@@ -45,22 +52,27 @@ body {
   font-style: italic;
   color: #79574A;
 }
-#div_esquerda {
-  background-color: whitesmoke;
-  min-height: 200px;
-  width:60%;
-  float: left;
-  font-family: Arial;
-  font-size: small;
+.div1,
+.div2 {
+  width: 200px;
+  min height: 200px;
+  justify-content: space-between; 
 }
-#div_direita {
-  background-color:whitesmoke;
-  min-height: 200px;
-  width:40%;
-  float: right;
-  font-family: arial;
-  font-style: italic; 
-  font-size: small; 
+
+.main {
+  display: flex;
+  width: 80%;
+  height: 100%;
+  justify-content: space-around;
+  margin: auto
+}
+.div1{
+  justify-content: flex-end;
+  
+}
+.div2{
+  justify-content:flex-start;
+  
 }
 .footer {
   background-color:#ffcbe9;
@@ -71,3 +83,11 @@ body {
   color:#79574A;
   text-align: center; 
  }
+ .img-perfil{
+   width: 180px;
+   height: 180px;
+ }
+ /*hr style*/
+ hr {
+  border-top: 2px dotted rgb(22, 2, 17);
+}
