--- a/css/estilos.css
+++ b/css/estilos.css
@@ -85,11 +85,8 @@ body {
    justify-content: center;
  }
  
-.form-group{
-  align-items: center;
-  justify-content: center;
-}
-.button{
+.form{
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -105,6 +102,7 @@ body {
 }
 
 .principal{
+  display: flex;
   align-items: flex-end;
  justify-content: center;
 }
