--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,6 +41,12 @@ body {
   a:hover {
     text-decoration:underline;
   }
+  .intro{
+    display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
+  }
   .site-subtitle,
 .site-title {
  text-align: center;
@@ -101,8 +107,9 @@ body {
 
 .principal{
   display: flex;
-  align-items: flex-end;
+  align-items: center;
  justify-content: center;
+ flex-direction: column;
 }
 .button {
   width:30%;
@@ -111,4 +118,9 @@ body {
 .form-group{
   display: flex;
   flex-direction: column;
+}
+.card{
+  display: flex;
+  justify-content: space-between;
+  flex-direction:column;
 }
