--- a/css/estilos.css
+++ b/css/estilos.css
@@ -77,6 +77,7 @@ body {
   font-family: Arial; 
   position: absolute;
   bottom: 0;
+  display: flex;
   align-items: flex-end;
   width:100% ;
  }
@@ -87,8 +88,6 @@ body {
  .img-perfil{
    width: 20%;
    height: 20%;
-   align-items: center;
-   justify-content: center;
  }
  
 .form, button {
