--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,7 @@ body {
 .menu{
     background-image: url("https://i.pinimg.com/originals/c4/bd/8d/c4bd8dd8395edb8d529b40bdcca5112a.jpg");
     font-family: 'Bebas Neue', cursive;
+    color:SaddleBrown;
   
     }
   
@@ -42,10 +43,11 @@ body {
     text-decoration:underline;
   }
   .intro{
-    display: flex;
+  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
+ width:auto;
   }
   .site-subtitle,
 .site-title {
@@ -71,6 +73,7 @@ body {
   align-items: center;
   font-size: small;
   justify-content: center;
+  width: auto;
 }
 .footer {
   background-color:#ffcbe9;
@@ -86,8 +89,8 @@ body {
   text-align: center; 
  }
  .img-perfil{
-   width: 20%;
-   height: 20%;
+   width: 15%;
+   height: 15%;
  }
  
 .form, button {
@@ -105,21 +108,50 @@ body {
 }
 
 .principal{
-  display: flex;
-  align-items: center;
- justify-content: center;
+ display: flex;
+ align-items:center;
+ justify-content:center;
  flex-direction: column;
+ align-content: center;
 }
 .button {
-  width:30%;
-  border-color: pink;
+ width:30%;
+ border-color: pink;
 }
 .form-group{
   display: flex;
   flex-direction: column;
+  border-color: pink;
+  background-color: pink;
 }
 .card{
   display: flex;
   justify-content: space-between;
   flex-direction:column;
+  text-align: center;
+  align-items: center;
+}
+.formacao{
+  font-family: 'Bebas Neue', cursive;
+  text-align: center;
+}
+.about,
+.contato {
+  font-family:'Bebas Neue', cursive;
+}
+.contato {
+  text-align: center;
+}
+.card-body{
+  border-color: pink;
+}
+.contato-text{
+  width:auto;
+  font-size:14;;
+  text-align: center;
+  align-items:stretch;
+}
+.profession{
+  font-style: italic;
+  color: #79574A;
 }
